[gd_scene load_steps=3 format=3 uid="uid://d20jo2ysdhhu2"]

[ext_resource type="Script" uid="uid://tm3pm6ws4oet" path="res://Scripts/laptop_minigame.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://bh41xx5jdxd6h" path="res://Assets/sprites/level/laptop.png" id="2_ry1nu"]

[node name="LaptopMinigame" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -78.0
offset_right = -10.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ry1nu")
expand_mode = 1

[node name="WordDisplay" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 98.0
offset_top = 3.0
offset_right = -98.0
offset_bottom = 26.0
grow_horizontal = 2
text = "P_L_B_A"
fit_content = true
scroll_active = false

[node name="GuessInput" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 21.0
offset_top = 219.0
offset_right = 1.0
offset_bottom = 250.0
grow_horizontal = 2
placeholder_text = "Escribe tu respuesta aqu√≠"

[node name="SubmitButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.0
offset_top = 58.0
offset_right = 53.0
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 0
text = "Enviar"

[node name="FeedbackLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 145.0
offset_top = 81.0
offset_right = -151.0
offset_bottom = 104.0
grow_horizontal = 2
text = "Feedback"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="Panel"]
wait_time = 10.0
one_shot = true
